# SunrayNext-FlyControl-Helper

./: .clangd  .gitignore  README.md  README_cn.md  sdkconfig
C5端工程/: README.md  sdkconfig.old
P4端工程/: README.md  sdkconfig.old
P4端工程/main/: wifi_app.c
PCB工程/: BOM_Fly_Control_Helper v1.1.xlsx  PickAndPlace_PCB.xlsx
c5-firmware/: README.md  sdkconfig  sdkconfig.defaults.esp32c5
docs/: 01-project-intro.md  02-quick-start.md  03-development-workflow.md  04-troubleshooting.md  README.md  checktodolist.md
docs/architecture/: c5-firmware-architecture.md  p4-c5-integration.md  p4-firmware-architecture.md  system-overview.md
docs/diagrams/: render.sh
docs/diagrams/src/: _theme.iuml  bringup-checklist-flow.puml  c5-hosted-layering.puml  network-to-uart-sequence.puml  p4-module-dependency.puml  startup-flow.puml  system-context.puml  uart-to-network-sequence.puml
docs/guides/: adding-a-feature.md  c5-flashing-boot-mode.md  flash-benchmark-matrix.md
docs/interfaces/: console-commands.md  data-flow.md
firmware-c5/: .clangd  CMakeLists.txt  README.md  sdkconfig
firmware-c5/common/: .clangd  README.md  esp_hosted_header.h
firmware-c5/common/proto/: esp_hosted_rpc.pb-c.c
firmware-c5/main/: CMakeLists.txt  Kconfig.projbuild  uart_slave_api.c
firmware-c5/main/app/service/: coprocessor_entry.c  coprocessor_entry.h
firmware-c5/main/config/model/: product_feature_flags.h
firmware-c5/main/control/service/: control_boundary.h
firmware-c5/main/transport/service/: transport_boundary.h
firmware-c5/main/upstream/: esp_hosted_coprocessor.c
firmware-c5/main/wifi/service/: wifi_boundary.h
firmware-p4/: .clangd  CMakeLists.txt  README.md  sdkconfig.defaults
firmware-p4/main/: CMakeLists.txt  bridge_cmd.c  console_app.c  main.c  mavlink_bridge.h  network_app.cpp  network_app.h  network_cmd.h
firmware-p4/main/app/service/: app_boot.c  app_boot.h
firmware-p4/main/bridge/adapter/: mavlink_parser.cpp  mavlink_parser.h
firmware-p4/main/bridge/infra/: bridge_internal.h
firmware-p4/main/bridge/model/: bridge_config.h  bridge_stats.h  bridge_types.h
firmware-p4/main/bridge/service/: bridge_accessors.cpp  bridge_network_runtime.cpp  bridge_runtime.cpp  bridge_runtime.h  bridge_stats.cpp
firmware-p4/main/network/adapter/: socket_adapter.cpp
firmware-p4/main/network/command/: network_command.c  network_command.h  network_command_args.c  network_command_help.c  network_command_internal.h
firmware-p4/main/network/infra/: network_internal.hpp
firmware-p4/main/network/model/: network_types.h
firmware-p4/main/network/service/: network_config_store.cpp  network_runtime.cpp  network_runtime.h  network_session_tcp.cpp  network_session_udp.cpp
firmware-p4/main/transport/adapter/: uart_port.cpp  uart_port.h
main/: CMakeLists.txt  bridge_cmd.c  bridge_cmd.h  console_app.h  idf_component.yml  main.c  mavlink_bridge.cpp  mavlink_bridge.h  network_app.h  network_cmd.c  network_cmd.h  wifi_app.h
p4-firmware/main/: console_app.c
pcb-design/: 飞控助手1.1.epro2
